@@ -462,7 +462,7 @@ static void php_var_serialize_class(smart_str *buf, zval **struc, zval *retval_p
 						"serialize.");
 				/* we should still add element even if it's not OK,
 				   since we already wrote the length of the array before */
-				smart_str_appendl(buf,"s:0:\"\";N;", 9);
+				smart_str_appendl(buf,"N;", 2);
 				continue;
 			}
 
@@ -543,6 +543,9 @@ static void php_var_serialize_intern(smart_str *buf, zval **struc, HashTable *va
 							php_error_docref(NULL TSRMLS_CC, E_NOTICE, "__sleep should return an array only "
 												"containing the names of instance-variables to "
 												"serialize.");
+							/* we should still add element even if it's not OK,
+				   			   since we already wrote the length of the array before */
+							smart_str_appendl(buf,"N;", 2);
 						}
 
 						zval_ptr_dtor(&retval_ptr);
